# chimere-studio

./: .gitignore  README.md  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/chat/: page.tsx
app/memory/: page.tsx
app/settings/: page.tsx
components/artifacts/: ArtifactsPanel.tsx  CodeBlock.tsx  MermaidArtifact.tsx  MessageContent.tsx  PythonArtifact.tsx
components/memory/: EngramTab.tsx  EpisodesTab.tsx  FactsTab.tsx
components/voice/: VADDetector.ts  VoiceOverlay.tsx
lib/: artifacts-store.ts  memory-api.ts  stt_client.ts  tts_client.ts
public/: pyodide-worker.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
